<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/com_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/togetherworks" />

        <EditText
            android:id="@+id/com_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/com_id"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/mem_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/mem_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mem_id"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/mem_pw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/com_id"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/mem_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mem_pw"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mem_id"
            tools:targetApi="o" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="213dp"
            android:layout_height="46dp"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:layout_marginBottom="8dp"
            android:background="#009688"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_btn"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/auto_login_checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mem_pw" />

        <TextView
            android:id="@+id/sign_up_btn"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:onClick="onClick"
            android:text="@string/sign_up_btn"
            android:textColor="#337ab7"
            app:layout_constraintBottom_toTopOf="@+id/id_search_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sign_up_textView"
            app:layout_constraintTop_toBottomOf="@+id/auto_login_checkBox" />

        <TextView
            android:id="@+id/id_search_btn"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:onClick="onClick"
            android:text="@string/id_search_btn"
            android:textColor="#337ab7"
            app:layout_constraintBottom_toTopOf="@+id/pw_search_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_search_textView"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

        <TextView
            android:id="@+id/pw_search_btn"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:onClick="onClick"
            android:text="@string/pw_search_btn"
            android:textColor="#337ab7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pw_search_textView"
            app:layout_constraintTop_toBottomOf="@+id/id_search_btn" />

        <CheckBox
            android:id="@+id/auto_login_checkBox"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:text="@string/auto_login_checkBox"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />

        <TextView
            android:id="@+id/sign_up_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up_textView"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/id_search_textView"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auto_login_checkBox" />

        <TextView
            android:id="@+id/id_search_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="1dp"
            android:text="@string/id_search_textView"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pw_search_textView"
            app:layout_constraintEnd_toStartOf="@+id/id_search_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_textView" />

        <TextView
            android:id="@+id/pw_search_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="1dp"
            android:text="@string/pw_search_textView"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/pw_search_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_search_textView" />

        <TextView
            android:id="@+id/terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/terms_of_service"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pw_search_textView" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/privacy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/information_communication_network_act"
            app:layout_constraintStart_toEndOf="@+id/terms_of_service"
            app:layout_constraintTop_toBottomOf="@+id/pw_search_textView" />

        <TextView
            android:id="@+id/information_communication_network_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/information_communication_network_act"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/personal_information_protection_act"
            app:layout_constraintStart_toEndOf="@+id/privacy"
            app:layout_constraintTop_toBottomOf="@+id/pw_search_textView" />

        <TextView
            android:id="@+id/personal_information_protection_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="24dp"
            android:text="@string/personal_information_protection_act"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/information_communication_network_act"
            app:layout_constraintTop_toBottomOf="@+id/pw_search_textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>